--- a/Discover-Card-Phone/res/values/styles_card.xml
+++ b/Discover-Card-Phone/res/values/styles_card.xml
@@ -2,7 +2,10 @@
 <resources>
     
      <style name="card_blue_hyperlink">
-        <item name="android:textColor">@color/blue_link</item>
+      <!--    13.4 Changes Start -->
+        <!-- <item name="android:textColor">@color/blue_link</item> -->
+        <item name="android:textColor">@color/footer_color</item>
+        <!--    13.4 Changes End -->
         <item name="android:textSize">@dimen/body_copy_min</item>
     </style>
     
