--- a/Discover-Card-Phone/res/layout/fastcheck_fragment.xml
+++ b/Discover-Card-Phone/res/layout/fastcheck_fragment.xml
@@ -6,6 +6,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginTop="18dp"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
