--- a/Discover-Card-Phone/res/layout/register_create_password.xml
+++ b/Discover-Card-Phone/res/layout/register_create_password.xml
@@ -18,12 +18,15 @@
             style="@style/WhiteTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
             android:focusable="true"
             android:focusableInTouchMode="true" >
 
             <TextView
                 android:id="@+id/account_info_main_error_label"
                 style="@style/error_label"
+                android:textColor="#293033"
+                android:layout_marginBottom="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
@@ -72,11 +75,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_error_label_layout"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="6dp"
+               android:textColor = "#8a9499"
+                android:layout_marginTop="18dp"
                 android:includeFontPadding="false"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
                 android:text="@string/forgot_pass_create_new_text"
                 android:textSize="16dp" />
 
@@ -108,10 +109,10 @@
                 android:layout_below="@+id/enter_new_pass_error_one_label"
                 android:layout_marginTop="2dp"
                 android:includeFontPadding="false"
+                android:textColor="#8a9499"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
                 android:text="@string/account_info_two_pass_info_text"
-                android:textColor="@color/sub_copy"
                 android:textSize="14dp"
                 android:textStyle="normal" />
 
@@ -121,12 +122,11 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/account_info_two_pass_field"
                 android:layout_alignRight="@+id/account_info_two_pass_field"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="2dp"
                 android:includeFontPadding="false"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
-                android:text="@string/strength_text"
-                android:textColor="@color/sub_copy"
+                 android:text="@string/strength_text"
+                android:textColor="#8a9499"
                 android:textSize="14dp"
                 android:textStyle="normal" />
 
@@ -141,8 +141,9 @@
                 android:includeFontPadding="false"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
+                 android:textColor="#8a9499"
                 android:text="@string/account_info_two_new_pass_confirm_text"
-                android:textSize="16dp" />
+                android:textSize="14dp" />
 
             <com.discover.mobile.card.common.uiwidget.ConfirmationEditText
                 android:id="@+id/account_info_two_pass_confirm_field"
@@ -154,7 +155,7 @@
                 android:textColor="#8a9499"
                 android:textCursorDrawable="@null"
                 android:textSize="14dp"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <TextView
                 android:id="@+id/enter_new_pass_error_two_label"
@@ -164,7 +165,8 @@
                 android:layout_below="@+id/account_info_two_pass_confirm_field"
                 android:includeFontPadding="false"
                 android:text="@string/account_info_two_passwords_dont_match_text"
-                android:textSize="14dp" />
+                android:textColor="#ed1c24"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/account_info_two_cancel_label"
@@ -190,7 +192,7 @@
                 android:layout_below="@+id/account_info_two_pass_confirm_field"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="14dp"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="40dp"
                 android:onClick="checkInputsThenSubmit"
                 android:text="@string/submit_text" />
 
