--- a/Discover-Card-Phone/res/layout/register_enter_account_info.xml
+++ b/Discover-Card-Phone/res/layout/register_enter_account_info.xml
@@ -18,11 +18,23 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:paddingBottom="@dimen/forms_inner_padding"
-            android:paddingLeft="@dimen/forms_inner_padding"
-            android:paddingRight="@dimen/forms_inner_padding" >
+            android:paddingBottom="20dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp" >
+
+            <TextView
+                android:id="@+id/forgot_password"
+                style="@style/title_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/header"
+                android:includeFontPadding="false"
+                android:text="@string/forgot_password_text"
+                android:textColor="#293033"
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/account_info_label_one_label"
@@ -30,13 +42,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_error_label_layout"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginTop="18dp"
                 android:includeFontPadding="false"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
                 android:text="@string/account_info_label_one"
-                android:textSize="16dp" />
+                android:textColor="#8a9499"
+                android:textSize="14dp" />
 
             <com.discover.mobile.card.common.uiwidget.UsernameOrAccountNumberEditText
                 android:id="@+id/account_info_main_input_field"
@@ -46,8 +57,8 @@
                 android:imeOptions="actionDone"
                 android:textColor="#8a9499"
                 android:textCursorDrawable="@null"
-                android:textSize="14dp"
-                android:textStyle="bold" />
+                android:textSize="18dp"
+                />
 
             <TextView
                 android:id="@+id/account_information_input_info_label"
@@ -75,7 +86,8 @@
             <RelativeLayout
                 android:id="@+id/account_info_error_label_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:layout_below="@+id/forgot_password" >
 
                 <ImageView
                     android:id="@+id/icon"
@@ -105,13 +117,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_information_input_info_label"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginTop="18dp"
                 android:includeFontPadding="false"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
                 android:text="@string/card_expiration_date_text"
-                android:textSize="16dp" />
+                android:textColor="#8a9499"
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/account_info_ssn_info_label"
@@ -119,13 +130,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_expiration_date_error_label"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="10dp"
                 android:includeFontPadding="false"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginTop="18dp"
                 android:text="@string/account_info_ssn_info_text"
-                android:textSize="16dp" />
+                android:textColor="#8a9499"
+                android:textSize="14dp" />
 
             <com.discover.mobile.card.common.uiwidget.SsnEditText
                 android:id="@+id/account_info_ssn_input_field"
@@ -136,18 +146,17 @@
                 android:imeOptions="actionDone"
                 android:textColor="#8a9499"
                 android:textCursorDrawable="@null"
-                android:textSize="14dp"
-                android:textStyle="bold" />
+                android:textSize="18dp"
+                 />
 
             <TextView
                 android:id="@+id/account_info_ssn_prefix_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_alignTop="@id/account_info_ssn_input_field"
                 android:layout_below="@+id/account_info_ssn_info_label"
                 android:paddingRight="4dp"
-                android:paddingTop="8dp"
+                android:layout_marginTop="36dp"
                 android:text="@string/ssn_prefix"
                 android:textColor="#8a9499"
                 android:textSize="14dp"
@@ -169,13 +178,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_ssn_error_label"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginTop="18dp"
                 android:includeFontPadding="false"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
                 android:text="@string/account_info_dob_text"
-                android:textSize="16dp" />
+                android:textColor="#8a9499"
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/account_info_dob_year_error_label"
@@ -216,11 +224,11 @@
 
             <com.discover.mobile.card.common.uiwidget.CardExpirationDateEditText
                 android:id="@+id/account_info_card_exp_date_picker"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_card_expiration_date_label"
                 android:textColor="#8a9499"
-                android:textSize="14dp"
+                android:textSize="18dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -234,11 +242,11 @@
 
             <com.discover.mobile.card.common.uiwidget.DatePickerEditText
                 android:id="@+id/account_info_birth_date_picker"
-                android:layout_width="200dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_dob_label"
                 android:textColor="#8a9499"
-                android:textSize="14dp"
+                android:textSize="18dp"
                 android:textStyle="bold" />
 
             <RelativeLayout
