--- a/Discover-Card-Phone/res/values/color.xml
+++ b/Discover-Card-Phone/res/values/color.xml
@@ -79,12 +79,11 @@
     <!-- fastcheck -->
     <color name="transparentGray">#50000000</color>
     
-    <!-- Passcode -->
+       <!-- Passcode -->
 	<color name="passcodeBlack">#293033</color>
 	<color name="passcodeBlue">#2d79b3</color>
 	<color name="passcodeOrange">#F56000</color>
 	<color name="passcodeGray">#D7E6E9</color>
-
 	
     <color name="title_selector_color">#FD6C04</color>
    <color name="title_selector_text_color">#FFFFFF</color>
@@ -97,4 +96,13 @@
     <color name="grey_background_color">#FAF7F8</color>
     <color name="bottom_line">#cc5200</color>
     <color name="whatsnew_desc">#3d484d</color>
+    
+  <!--   13.4 Changes Start -->
+ <!--    Strong Auth  -->
+   <color name="field_color">#293033</color>
+   <color name="footer_color">#267bb1</color>
+   <color name="body_color">#f8fafa</color>
+   <color name="hint_color">#b9c1c5</color>
+   
+ 
 </resources>
