--- a/Discover-Card-Phone/res/values/styles.xml
+++ b/Discover-Card-Phone/res/values/styles.xml
@@ -292,12 +292,6 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <!-- Strong auth -->
-    <style name="strongauth_ans_selection">
-        <item name="android:textColorHighlight">#3d484d</item>
-        <item name="android:textColor">#8a9499</item>
-        <item name="android:textSize">14sp</item>
-    </style>
     <!-- FastView/QuickView -->
     <style name="quick_view_text">
         <item name="android:textColor">#3d484d</item>
@@ -309,14 +303,55 @@
         <item name="android:textColor">#267bb1</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <!-- FastView/QuickView -->
+
+
+    <!-- Whats New -->
 
     <style name="whatsnew_small_copy" parent="discover_text">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:textColor">@color/whatsnew_desc</item>
-        <item name="android:textStyle">normal</item>                
+        <item name="android:textStyle">normal</item>
     </style>
-      
-          <!-- Passcode Styles start -->
+    <!-- Whats New -->
+
+
+    <!-- /* 13.4  Changes Start* -->
+
+    <style name="strongauth_ans_selection">
+        <item name="android:textColorHighlight">#3d484d</item>
+        <item name="android:textColor">#8a9499</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="spinner_style">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#3d484d</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">#ebeff0</item>
+        <item name="android:hint">Select a Question</item>
+        <item name="android:windowTitleStyle">@style/prompt_style</item>
+    </style>
+
+    <style name="prompt_style" parent="@android:style/Theme.Dialog">
+        <item name="android:background">@android:color/black</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
+    <style name="HoloSpinner">
+        <item name="android:background">@drawable/spinner_holo</item>
+    </style>
+
+    <style name="page_title">
+        <item name="android:textColor">@color/title</item>
+        <item name="android:textSize">@dimen/title_min</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- /* 13.4  Changes End* -->
+    
+     <!-- Passcode Styles start -->
     <style name="PasscodeDigit">
         <item name="android:textSize">@dimen/passcode_digit_text</item>
         <item name="android:typeface">serif</item>
@@ -396,4 +431,5 @@
     </style>
     
     <!-- Passcode Styles end -->
+
 </resources>
