--- a/Discover-Bank-Phone/res/layout-land/bank_atm_detail_item.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_detail_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/common_table_list_item_white"
         android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingTop="@dimen/forms_inner_padding" >
 
@@ -20,6 +21,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
+            android:contentDescription="@string/empty"
             android:src="@drawable/atm_expand_icon" />
 
         <TextView
@@ -38,7 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/title"
-            android:layout_below="@+id/title" />
+            android:layout_below="@+id/title"
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/address2"
@@ -47,17 +50,22 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/title"
             android:layout_marginLeft="1dp"
-            android:layout_toRightOf="@+id/address" />
+            android:layout_toRightOf="@+id/address"
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/distance"
             style="@style/atm_large_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/directions"
+            android:layout_alignTop="@+id/directions"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
-            android:layout_toLeftOf="@+id/directions" />
+            android:layout_toLeftOf="@+id/directions"
+            android:gravity="center_vertical"
+            android:textColor="@color/blue_link" />
 
         <ImageView
             android:id="@+id/directions"
@@ -67,6 +75,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
+            android:contentDescription="@string/empty"
             android:src="@drawable/atm_directional_arrows" />
     </RelativeLayout>
 
@@ -76,8 +85,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/field_stroke"
-        android:visibility="visible" 
-        android:paddingTop="@dimen/forms_inner_padding">
+        android:paddingTop="@dimen/forms_inner_padding"
+        android:visibility="visible" >
 
         <TextView
             android:id="@+id/hours_label"
@@ -156,10 +165,11 @@
             android:layout_height="20dp"
             android:layout_above="@+id/report"
             android:layout_alignParentRight="true"
-            android:paddingTop="@dimen/groups_of_elements_padding"
-            android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
-            android:background="@drawable/atm_street_view_icon_sm" />
+            android:layout_marginRight="@dimen/forms_inner_padding"
+            android:background="@drawable/atm_street_view_icon_sm"
+            android:contentDescription="@string/empty"
+            android:paddingTop="@dimen/groups_of_elements_padding" />
 
         <Button
             android:id="@+id/email"
@@ -190,6 +200,7 @@
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@drawable/table_solid_line" />
+        android:background="@drawable/table_solid_line"
+        android:contentDescription="@string/empty" />
 
 </LinearLayout>
