--- a/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/common_table_list_item_white"
         android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingTop="@dimen/forms_inner_padding" >
 
@@ -20,6 +21,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
+            android:contentDescription="@string/empty"
             android:src="@drawable/atm_expand_icon" />
 
         <TextView
@@ -38,7 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/title"
-            android:layout_below="@+id/title" />
+            android:layout_below="@+id/title"
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/address2"
@@ -46,7 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/title"
-            android:layout_below="@+id/address" />
+            android:layout_below="@+id/address"
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/distance"
@@ -57,16 +61,18 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:layout_marginLeft="@dimen/forms_inner_padding"
-            android:layout_marginRight="@dimen/forms_inner_padding" />
+            android:layout_marginRight="@dimen/forms_inner_padding"
+            android:textColor="@color/blue_link" />
 
         <ImageView
             android:id="@+id/directions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignRight="@+id/distance"
             android:layout_below="@+id/distance"
-            android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
+            android:contentDescription="@string/empty"
+            android:scaleType="center"
             android:src="@drawable/atm_directional_arrows" />
     </RelativeLayout>
 
@@ -98,8 +104,8 @@
             android:id="@+id/services"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_below="@+id/hours"
+            android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginTop="@dimen/groups_of_elements_padding"
             android:orientation="vertical" >
 
@@ -148,17 +154,18 @@
             android:layout_below="@+id/services"
             android:paddingBottom="@dimen/forms_inner_padding"
             android:visibility="invisible" />
-        
+
         <ImageView
             android:id="@+id/street_view"
             android:layout_width="30dp"
             android:layout_height="20dp"
-            android:minHeight="30dp"
             android:layout_above="@+id/report"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
-            android:background="@drawable/atm_street_view_icon_sm" />
+            android:layout_marginRight="@dimen/forms_inner_padding"
+            android:background="@drawable/atm_street_view_icon_sm"
+            android:contentDescription="@string/empty"
+            android:minHeight="30dp" />
 
         <Button
             android:id="@+id/email"
@@ -181,14 +188,15 @@
             android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/call_to_actions_padding"
             android:paddingBottom="@dimen/forms_inner_padding"
-            android:textSize="@dimen/small_copy_mid"
-            android:text="@string/atm_location_report" />
+            android:text="@string/atm_location_report"
+            android:textSize="@dimen/small_copy_mid" />
     </RelativeLayout>
 
     <ImageView
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@drawable/table_solid_line" />
+        android:background="@drawable/table_solid_line"
+        android:contentDescription="@string/empty" />
 
 </LinearLayout>
