US8727:  Changed the layout of the ATM locator.

--- a/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
@@ -54,21 +54,23 @@
         android:paddingTop="@dimen/forms_inner_padding"
         android:weightSum="2" >
 
-        <Button
+        <ImageButton
             android:id="@+id/list_nav"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_weight="1"
-            android:background="@drawable/atm_listview_button_landscape" />
+            android:background="@drawable/common_atm_button_selector"
+            android:src="@drawable/atm_list" />
 
-        <Button
+        <ImageButton
             android:id="@+id/map_nav"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="@dimen/between_related_elements_padding"
             android:layout_weight="1"
-            android:background="@drawable/atm_pinview_button_ds_landscape" />
+            android:background="@drawable/common_atm_button_selector"
+            android:src="@drawable/atm_pin_icon_selected" />
     </LinearLayout>
 
     <!-- Layout Displays Google's Terms of Use -->
