--- a/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
@@ -50,7 +50,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/light_gray_bkgrd"
+        android:background="@drawable/atm_search_bar_background"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingLeft="@dimen/forms_inner_padding"
@@ -58,21 +58,25 @@
         android:paddingTop="@dimen/forms_inner_padding"
         android:weightSum="2" >
 
-        <Button
+        <ImageButton
             android:id="@+id/list_nav"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_weight="1"
-            android:background="@drawable/atm_list_view_button" />
+            android:background="@drawable/common_atm_button_selector"
+            android:padding="@dimen/min_button_padding"
+            android:src="@drawable/atm_list" />
 
-        <Button
+        <ImageButton
             android:id="@+id/map_nav"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginLeft="@dimen/between_related_elements_padding"
             android:layout_weight="1"
-            android:background="@drawable/atm_pinview_button_ds" />
+            android:background="@drawable/common_atm_button_selector"
+            android:padding="@dimen/min_button_padding"
+            android:src="@drawable/atm_pin_icon_selected" />
     </LinearLayout>
 
     <WebView
@@ -89,15 +93,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
-    
-	
-	<com.discover.mobile.bank.atm.AtmTapAndHoldCoachOverlay
-    	android:id="@+id/tap_and_hold_coach"
-    	android:layout_height="match_parent"
-    	android:layout_width="match_parent"
-    	android:layout_below="@+id/full_search_bar"
-    	android:layout_above="@+id/map_navigation_panel"
-    	android:focusable="true"
-    	android:visibility="gone" />
+
+    <com.discover.mobile.bank.atm.AtmTapAndHoldCoachOverlay
+        android:id="@+id/tap_and_hold_coach"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/map_navigation_panel"
+        android:layout_below="@+id/full_search_bar"
+        android:focusable="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
