--- a/Discover-Commons/res/values/styles_common_modals.xml
+++ b/Discover-Commons/res/values/styles_common_modals.xml
@@ -36,13 +36,14 @@
     </style>
 
     <style name="common_modal_orange_button" parent="common_call_to_action_theme_orange">
+        <item name="android:textSize">@dimen/small_copy_max</item>
         <item name="android:paddingLeft">@dimen/small_orange_button_left_right_padding</item>
         <item name="android:paddingRight">@dimen/small_orange_button_left_right_padding</item>
         <item name="android:paddingTop">@dimen/small_call_to_actions_padding</item>
         <item name="android:paddingBottom">@dimen/small_call_to_actions_padding</item>
         <item name="android:background">@drawable/common_modal_orange_button_selector</item>
     </style>
-    
+
     <style name="common_modal_gray_button" parent="common_call_to_action_gray_theme">
         <item name="android:background">@drawable/common_modal_gray_button_selector</item>
         <item name="android:textColor">@color/sub_copy</item>
