--- a/Discover-Commons/res/layout/modal_default_one_button_bottom.xml
+++ b/Discover-Commons/res/layout/modal_default_one_button_bottom.xml
@@ -4,23 +4,14 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/forms_inner_padding"
     android:layout_marginRight="@dimen/forms_inner_padding" >
-
-    <View
-        android:id="@+id/modal_alert_divider"
-        android:layout_width="fill_parent"
-        android:layout_height="5dp"
-        android:layout_above="@+id/button"
-        android:background="@drawable/shadow_gradient"
-        android:visibility="visible" />
-
+    
     <Button
         android:id="@+id/button"
-        style="@style/call_to_action_theme"
+        style="@style/common_modal_orange_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/modal_orange_margin_bottom"
-        android:layout_marginTop="@dimen/modal_orange_margin_top" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
