--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -20,7 +20,8 @@
     <dimen name="status_bar_height">50dp</dimen>
     
     <!-- RadioGroup Image Inner Padding -->
-    <dimen name="radio_group_inner_padding">15dp</dimen>
+    <!-- NOTE edit me in v-17 as well -->
+    <dimen name="radio_group_inner_padding">45dp</dimen>
     
     <dimen name="header_progress_height">45dp</dimen>
     
