--- a/Discover-Bank-Phone/res/layout/faq_detail_fragment.xml
+++ b/Discover-Bank-Phone/res/layout/faq_detail_fragment.xml
@@ -2,8 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scroll_view"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingLeft="@dimen/forms_inner_padding" >
+    android:layout_height="fill_parent" >
 
     <RelativeLayout 
         android:layout_width="fill_parent"
@@ -13,8 +12,7 @@
 	        android:id="@+id/content"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
-	        android:orientation="vertical"
-	        android:paddingBottom="@dimen/forms_inner_padding" >
+	        android:orientation="vertical" >
 	
 	        <TextView
 	            android:id="@+id/title"
@@ -28,10 +26,8 @@
 	            android:id="@+id/content_table"
 	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
-	            android:layout_marginRight="@dimen/forms_inner_padding"
-	            android:background="@drawable/rounded_table_corners_no_padding"
-	            android:orientation="vertical"
-	            android:padding="1dp" >
+	            android:background="@drawable/common_table_background"
+	            android:orientation="vertical"  >
 	        </LinearLayout>
 	    </LinearLayout>
 	    
