--- a/Discover-Bank-Phone/res/layout/faq_landing_page.xml
+++ b/Discover-Bank-Phone/res/layout/faq_landing_page.xml
@@ -8,16 +8,16 @@
         android:id="@+id/faq_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/forms_inner_padding" >
+        android:paddingTop="@dimen/forms_inner_padding"
+        android:paddingBottom="@dimen/forms_inner_padding" >
 
         <LinearLayout
             android:id="@+id/faq_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:background="@drawable/rounded_table_corners_no_padding"
-            android:orientation="vertical"
-            android:padding="1dp" >
+            android:background="@drawable/common_table_background"
+            android:orientation="vertical" >
         </LinearLayout>
 
         <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
